# wgpu-renderer

./: Cargo.toml
assets/: Cube.glb
assets/models/: Dice.blend  Dice.glb  Dice.mtl
assets/shaders/: draw.wgsl  light.wgsl
crates/wre-collision/: Cargo.toml
crates/wre-model/: Cargo.toml
crates/wre-terrain/: Cargo.toml
crates/wre-terrain/src/: component.rs  consts.rs  lib.rs  system.rs
crates/wre-window/: Cargo.toml
crates/wre-window/src/: lib.rs
crates/wre_app/: Cargo.toml
crates/wre_app/src/: lib.rs
crates/wre_camera/: Cargo.toml
crates/wre_camera/src/: lib.rs
crates/wre_collision/: Cargo.toml
crates/wre_input/: Cargo.toml
crates/wre_input/src/: lib.rs
crates/wre_model/: Cargo.toml
crates/wre_model/src/: lib.rs  shader.wgsl
crates/wre_player/: Cargo.toml
crates/wre_player/src/: lib.rs
crates/wre_renderer/: Cargo.toml
crates/wre_renderer/src/: lib.rs  renderable.rs  texture.rs  vk_util.rs
crates/wre_terrain/: Cargo.toml
crates/wre_terrain/src/: component.rs  consts.rs  lib.rs
crates/wre_transform/: Cargo.toml
crates/wre_transform/src/: lib.rs
crates/wre_window/: Cargo.toml
crates/wre_window/src/: lib.rs
crates/wre_world/: Cargo.toml
crates/wre_world/src/: entity.rs  lib.rs
scripts/: bc5_heightmap.py
src/: app.rs  camera.rs  lib.rs  main copy.rs  main.rs  model.rs  particle_compute.rs  shader.wgsl  terrain.rs  terrain.wgsl  terrain_cull.wgsl  texture.rs  util.rs
src/meshes/: Car.glb
src/model/: mesh.rs  mod.rs  texture.rs
src/model_bk/: material.rs
src/shaders/: draw.wgsl
