[package]
name = "road"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*"]

[dependencies]
anyhow = "1.0.98"
env_logger = "0.11.8"
pollster = "0.4.0"

[workspace.dependencies]
bytemuck = "1.23.1"
log = "0.4.27"
glam = { version = "0.30.5", features = ["bytemuck", "fast-math"] }
thiserror = "2.0.12"
winit = "0.30.11"
wgpu = { git = "https://github.com/gfx-rs/wgpu", version = "26.0.0" }
