[package]
name = "wre"
version = "0.1.0"
edition = "2024"

[workspace]
resolver = "3"
members = ["crates/*"]

[profile.dev]
opt-level = 1

[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
pollster = "0.4.0"
winit = { workspace = true }
wre_app = { path = "crates/wre_app" }

[workspace.dependencies]
bytemuck = "1.23.2"
log = "0.4.27"
glam = { version = "0.30.5", features = ["bytemuck", "fast-math"] }
thiserror = "2.0.15"
winit = "0.30.12"
ash = "0.38.0"
