[package]
name = "wre_terrain"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { workspace = true }
const_for = "0.1.5"
glam = { workspace = true }
wgpu = { workspace = true }
wre_model = { path = "../wre_model" }
wre_camera = { path = "../wre_camera" }
thiserror = { workspace = true }
